# overseer

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  LICENSE  PHASE5.md  PHASE6.md  README.md  RESEARCH_TERMINAL_BACKEND.md  RESEARCH_TERMINAL_BACKEND_FINDINGS.md
.claude/skills/adding-harness-support/: SKILL.md
.claude/skills/verify/: SKILL.md
.github/workflows/: ci.yml  release.yml
crates/overseer/: ARCHITECTURE.md  Cargo.toml
crates/overseer-core/: ARCHITECTURE.md  Cargo.toml
crates/overseer-core/src/: daemon.rs  kill.rs  lib.rs  notify.rs  selection.rs  settings.rs  test_env.rs
crates/overseer-core/src/agent/: attention.rs  drop.rs  hook.rs  id.rs  mod.rs  node.rs  registry.rs  spawn.rs  status.rs  tree.rs
crates/overseer-core/src/agent/adapters/: claude.rs  mod.rs  opencode.rs  opencode_child.md  opencode_root.md  overseer_child_skill.md  overseer_root_skill.md  pi.rs  pi_child.md  pi_root.md
crates/overseer-core/src/agent/adapters/claude/: overseer_root_skill.md
crates/overseer-core/src/agent/adapters/opencode/: opencode_root.md
crates/overseer-core/src/config/: keybindings.rs  mod.rs  theme.rs
crates/overseer-core/src/ipc/: handlers.rs  mod.rs  protocol.rs  server.rs
crates/overseer-core/src/session/: keys.rs  mod.rs  pty.rs
crates/overseer-core/tests/: alacritty_boundary.rs
crates/overseer/examples/: mouse-probe.rs
crates/overseer/src/: app.rs  cli.rs  main.rs  tui.rs
crates/overseer/src/ui/: mod.rs  term_pane.rs
crates/overseer/tests/: alacritty_boundary.rs  kill_daemon_recovery.rs
docs/: architecture.mmd
examples/: pty_spike.rs
scripts/: stress.sh  test_lifecycle.sh
src/: app.rs  cli.rs  daemon.rs  git.rs  install.rs  kill.rs  main.rs  notify.rs  settings.rs  test_env.rs  tui.rs
src/agent/: drop.rs  hook.rs  id.rs  mod.rs  node.rs  registry.rs  spawn.rs  status.rs  tree.rs
src/agent/adapters/: claude.rs  mod.rs  opencode.rs  opencode_child.md  opencode_root.md  overseer_child_skill.md  overseer_root_skill.md  overseer_skill.md  pi.rs  pi_child.md  pi_root.md
src/config/: keybindings.rs  mod.rs  theme.rs
src/ipc/: client.rs  handlers.rs  mod.rs  protocol.rs  server.rs
src/session/: keys.rs  mod.rs  pty.rs  tmux.rs
src/ui/: mod.rs  term_pane.rs
tests/: alacritty_boundary.rs  kill_daemon_recovery.rs
