[package]
name = "overseer"
version = "0.1.0"
edition = "2021"
description = "Terminal IDE for orchestrating AI agent hierarchies"
license = "MIT"

[[bin]]
name = "overseer"
path = "src/main.rs"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
anyhow = "1"
uuid = { version = "1", features = ["v4", "serde"] }
tokio = { version = "1", features = ["rt", "net", "io-util", "time"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
thiserror = "1"
dirs = "5"
alacritty_terminal = "0.26"
toml = "0.8"
