[workspace]
resolver = "2"
members = ["crates/overseer-core", "crates/overseer"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
overseer-core = { path = "crates/overseer-core" }
ratatui = "0.29"
crossterm = "0.28"
anyhow = "1"
uuid = { version = "1", features = ["v4", "serde"] }
tokio = { version = "1", features = ["rt", "net", "io-util", "time", "sync", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
thiserror = "1"
dirs = "5"
alacritty_terminal = "0.26"
toml = "0.8"
unicode-segmentation = "1"
libc = "0.2"
